--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "worldcup-2022",
   "main": "./lib/worldcup-2022",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "ลิขสิทธิ์บอลโลก 2022 แต่ว่าไทยยังจำเป็นต้องลุ้นต่อ",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
     "atom-workspace": "worldcup-2022:toggle"
   },
@@ -13,6 +12,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
